--- a/source/mjml/global/style-inline.mjml
+++ b/source/mjml/global/style-inline.mjml
@@ -38,6 +38,10 @@
     min-width: 308px !important;
     padding-right: 6px !important;
     padding-left: 6px !important;
+    background-image: url("https://i.postimg.cc/W3XzDRrN/img-guitar-main-bg.jpg") !important;
+    background-position: left bottom !important;
+    background-repeat: no-repeat !important;
+    background-size: 50% !important;
   }
 
   span,
